# ML_neurites

./: .gitignore  README.md  beat.ipynb  pyproject.toml  test.ipynb
dataset/: labels.csv
src/notebooks/: notebook1.ipynb
src/testing/: Openfile.py  project_test.ipynb
