[project]
name = "ml-neurites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pretty-midi>=0.2.11",
    "python-osc>=1.9.3",
    "pythonos>=0.1.8",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.19",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]